# xJson

./: CMakeLists.txt  README.md
include/: xjson.h
src/: xjson.cpp
tests/: CMakeLists.txt  xtest_base_type.cpp
